--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,29 @@
   "name": "oms",
   "version": "1.0.0",
   "description": "order management system",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "tsc && nodemon ./build/index.js",
+    "start": "node ./build/index.js",
+    "ts:watch": "tsc -w"
   },
   "author": "Michael Dpenha",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/cors": "^2.8.4",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.14",
+    "nodemon": "^1.18.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/mongoose": "^5.2.12",
+    "@types/node": "^10.9.4",
+    "typescript": "^3.0.3"
+  }
 }
